--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bernademir.newsapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:theme="@style/Theme.AppCompat.Light"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.NewsApp">
+        android:supportsRtl="true">
+        <activity android:name="ui.news.NewsActivity"/>
+        <activity android:name="ui.favorites.FavoritesActivity"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
