--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:theme="@style/Theme.AppCompat.Light"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
-        <activity android:name="ui.news.NewsActivity"/>
-        <activity android:name="ui.favorites.FavoritesActivity"/>
-
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ui.WebViewActivity"></activity>
+        <activity android:name=".ui.NewsDetailActivity" />
+        <activity android:name="ui.news.NewsActivity" />
+        <activity android:name="ui.favorites.FavoritesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
